bug 275494 XUL Tree can't work with gok r  = aaronleventhal sr = henry.jia