accessible/src/atk/nsXULTreeAccessibleWrap.h
@@ -55,6 +55,9 @@ public:
   nsXULTreeAccessibleWrap(nsIDOMNode* aDOMNode, nsIWeakReference* aShell);
   virtual ~nsXULTreeAccessibleWrap() {}
 
+  NS_IMETHOD GetChildCount(PRInt32 *_retval);
+  NS_IMETHOD ChangeSelection(PRInt32 aIndex, PRUint8 aMethod, PRBool *aSelState);
+    
 private:
   nsCOMPtr<nsIAccessible> mCaption;
   nsString mSummary;
